[gd_scene load_steps=8 format=3 uid="uid://ywfs1lsjairk"]

[ext_resource type="Script" uid="uid://02racc3ut2pn" path="res://Game/World/Enemy/regular_enemy.gd" id="1_kp5df"]
[ext_resource type="PackedScene" uid="uid://detvmwgrdvv5y" path="res://Game/World/Player/Projectiles/Resume/projectile.tscn" id="2_ngk3y"]
[ext_resource type="Texture2D" uid="uid://b7vcdssu76l3e" path="res://Game/World/Enemy/enemy.png" id="3_gi8gx"]
[ext_resource type="Theme" uid="uid://d1gbsuhluo4pk" path="res://Resources/Theme/main_theme.tres" id="3_ngk3y"]
[ext_resource type="Script" uid="uid://c1sflh56qncek" path="res://Game/World/hitbox.gd" id="4_ngk3y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3va78"]
size = Vector2(100, 300)

[sub_resource type="CircleShape2D" id="CircleShape2D_kp5df"]
radius = 80.0

[node name="RegularEnemy" type="RigidBody2D" node_paths=PackedStringArray("RaiseLabel", "NameLabel", "TopAnchor", "HealthBar", "Sprite", "HitboxArea") groups=["Enemy"]]
gravity_scale = 0.0
lock_rotation = true
continuous_cd = 1
contact_monitor = true
max_contacts_reported = 10
linear_damp = 10.0
script = ExtResource("1_kp5df")
RaiseLabel = NodePath("TopAnchor/RaiseLabelAnchor/RaiseLabel")
ProjectileScene = ExtResource("2_ngk3y")
NameLabel = NodePath("NameLabelAnchor/NameLabel")
TopAnchor = NodePath("TopAnchor")
HealthBar = NodePath("TopAnchor/HealthBar")
Sprite = NodePath("Sprite")
HitboxArea = NodePath("Hitbox")
metadata/_custom_type_script = "uid://02racc3ut2pn"

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("3_gi8gx")
centered = false
offset = Vector2(-50, -300)

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("Parent")]
position = Vector2(0, -150)
script = ExtResource("4_ngk3y")
Parent = NodePath("..")
metadata/_custom_type_script = "uid://c1sflh56qncek"

[node name="Hitbox" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_3va78")

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("CircleShape2D_kp5df")

[node name="TopAnchor" type="Node2D" parent="."]
position = Vector2(0, -320)

[node name="HealthBar" type="ProgressBar" parent="TopAnchor"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -10.0
offset_right = 100.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ngk3y")
theme_type_variation = &"HealthBar"
max_value = 1.0
value = 1.0
show_percentage = false

[node name="RaiseLabelAnchor" type="Node2D" parent="TopAnchor"]
position = Vector2(0, -40)

[node name="RaiseLabel" type="Label" parent="TopAnchor/RaiseLabelAnchor"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ngk3y")
theme_type_variation = &"RaiseLabel"
text = "$12.00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabelAnchor" type="Node2D" parent="."]
position = Vector2(0, 50)

[node name="NameLabel" type="Label" parent="NameLabelAnchor"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ngk3y")
theme_type_variation = &"DisplayLabel"
text = "Lv 1 Graphic Designer"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
